--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="EOS,FIBOS,Phoenix">
     <meta name="author" content="">
 
-    <title>AS Financial - 区块链金融服务商</title>
+    <title>AS Finance - 区块链金融服务商</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
 
         <main role="main" class="inner cover">
             <h1 class="cover-heading">敬请期待.</h1>
-            <p class="lead">AS Financial定位于数字资产领域金融服务商，为用户提供灵活多样的金融产品，AS作为交易所外独立的第三方金融服务商，将通过区块链技术实现所有金融产品智能合约内实现，以实现客观的第三方，排除人为控制，实现成为行业内具有公信力的金融服务商。</p>
+            <p class="lead">AS Finance定位于数字资产领域金融服务商，为用户提供灵活多样的金融产品，AS作为交易所外独立的第三方金融服务商，将通过区块链技术实现所有金融产品智能合约内实现，以实现客观的第三方，排除人为控制，实现成为行业内具有公信力的金融服务商。</p>
  <!--
         <p class="lead">
           <a href="https://explorer.fibos.rocks/accounts/fibosphoenix" class="btn btn-lg btn btn-primary" target="_blank">为FIBOS Phoenix投票</a>
